--- a/Logic/Logic.csproj
+++ b/Logic/Logic.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Databases.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TicketBll.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
