--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -114,6 +114,7 @@
     <Compile Include="LoginDao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TicketDao.cs" />
+    <Compile Include="UserDAO.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Core\Compression\Snappy\lib\win\snappy32.dll" />
