--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -110,9 +110,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="enums\Priority.cs" />
+    <Compile Include="enums\Role_Enum.cs" />
+    <Compile Include="enums\Status_Enum.cs" />
     <Compile Include="models\Comment.cs" />
     <Compile Include="Databases_Model.cs" />
     <Compile Include="models\Employee.cs" />
+    <Compile Include="models\Employees_Model.cs" />
     <Compile Include="models\PartialUser.cs" />
     <Compile Include="models\Role.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
