--- a/Logic/Logic.csproj
+++ b/Logic/Logic.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
     <PackageReference Include="LiveChartsCore.SkiaSharpView.WPF">
       <Version>2.0.0-rc3.3</Version>
     </PackageReference>
@@ -18,9 +19,6 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <PackageReference Include="CommunityToolkit.Mvvm">
-      <Version>8.3.2</Version>
-    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
