changing in screens between create ticket and ticketoverview and back

--- a/GardenGroup/UI.csproj
+++ b/GardenGroup/UI.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="App.config.example">
+    <None Update="App.config">
       <Generator>MSBuild:Compile</Generator>
     </None>
   </ItemGroup>
